src/test/deca/context/invalid/improvided/cast_explicite_void.deca
{
   // Description:
   //   Test du cast explicite avec le type incompatible.
   //
   // Résultats:
   //   Erreur Contextuelle
   //   Ligne 8: We cannot cast to Void Type.
   boolean z = (void) (3.3);
}
